<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/mcd_ex_text_view"
        android:text="@string/mcd_lumens_explanation"
        android:textSize="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/led_calculator_text_view"
        android:text="@string/mcd_to_lumens_text_view"
        android:textSize="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/luminous_intensity_edit_text"
        android:hint="@string/luminous_intensity_hint_text"
        android:editable="true"
        android:imeOptions="actionDone"
        android:numeric="decimal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height"/>
    <EditText
        android:id="@+id/beam_angle_edit_text"
        android:hint="@string/beam_angle_hint_text"
        android:editable="true"
        android:imeOptions="actionDone"
        android:numeric="decimal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height"/>

    <EditText
        android:id="@+id/luminous_flux_edit_text"
        android:hint="@string/luminous_flux_hint_text"
        android:editable="true"
        android:imeOptions="actionDone"
        android:numeric="decimal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height"/>


    <LinearLayout
        android:id="@+id/calculate_buttons_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <Button
            android:id="@+id/calculate"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/calculate_button"/>

        <Button
            android:id="@+id/reset"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/reset_button"
            android:layout_alignEnd="@+id/power" />

    </LinearLayout>

    <TextView
        android:id="@+id/output_results"
        android:layout_below="@id/calculate_buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:gravity="center"
        android:textSize="@dimen/output_text_size"
        />

</LinearLayout>