<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/LightBlue"
    tools:context="com.aisflat439gardens.calculatorohmslaw.app.MainActivity">


    <TextView
        android:text="@string/num_resistor_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/band_text_view"/>

    <RadioGroup
        android:id="@+id/radio_band_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/four_band_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/four_band_radio"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/five_band_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/five_band_radio"/>

        <RadioButton
            android:id="@+id/six_band_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/six_band_radio" />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/spinner1_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:visibility="invisible" >

        <TextView
            android:id="@+id/spinner1_text_view"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/band_one"/>

        <Spinner
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:id="@+id/spinner1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/spinner2_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:visibility="invisible">

        <TextView
            android:id="@+id/spinner2_text_view"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/band_two"/>

        <Spinner
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:id="@+id/spinner2" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/spinner3_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:visibility="invisible">

        <TextView
            android:id="@+id/spinner3_text_view"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/band_three"/>

        <Spinner
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:id="@+id/spinner3" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/spinner4_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:visibility="invisible">

        <TextView
            android:id="@+id/spinner4_text_view"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/band_four"/>

        <Spinner
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:id="@+id/spinner4" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/spinner5_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:visibility="invisible">

        <TextView
            android:id="@+id/spinner5_text_view"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/band_five"/>

        <Spinner
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:id="@+id/spinner5"
            android:text="@string/band_five" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/spinner6_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:visibility="invisible">

        <TextView
            android:id="@+id/spinner6_text_view"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/band_six"/>

        <Spinner
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:id="@+id/spinner6" />

    </LinearLayout>

    <Button
        android:id="@+id/evaluate_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/evaluate_button_text"
        />

    <TextView
        android:id="@+id/output_resistor_text_view"
        android:text=""
        android:textSize="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>

</ScrollView>